--- a/css/components/header.css
+++ b/css/components/header.css
@@ -207,10 +207,10 @@ header {
 
 .burger-menu_active .burger-menu_nav {
     right: 0;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
+    -webkit-transition: 0.5s linear;
+    -moz-transition: 0.5s linear;
+    -o-transition: 0.5s linear;
+    transition: 0.5s linear;
     overflow: hidden;
     display: flex;
 }
