--- a/css/components/header.css
+++ b/css/components/header.css
@@ -193,7 +193,7 @@ header {
     -webkit-transition: 0.8s;
     -moz-transition: 0.8s;
     -o-transition: 0.8s;
-    transition: 0.8s;
+    transition: transform 5s;
 }
 
 .burger-menu_link {
