--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -24,6 +24,7 @@ text-align: center;
     position: relative;
     left: 50%;
     transform: translate(-50%);
+    width: 9rem;
 }
 .contacts{
     font-family: var(--font-family);
